syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.grpc";
option java_outer_classname = "UserServiceProto";

service UserService {
  rpc GetRegisteredUsers (GetUsersRequest) returns (GetUsersResponse);
}

message GetUsersRequest {
  string date = 1;
}

message User {
  string id = 1;
  string phoneNo = 2;
  string email = 3;
  int64 time = 4;
}

message GetUsersResponse {
  repeated User users = 1;
}
